# kernel

./: .gitignore  Cargo.toml  Cargo.toml.orig  Dockerfile  LICENSE  Makefile  Makefile.toml  README.md  build.sh  run.sh
bootloader/grub2/: boot.asm  header.asm
bootloader/grub2/isofiles/boot/grub/: grub.cfg
bootloader/x86_64/: bootsector.asm  disk.asm
docker_ctx/: Dockerfile
linkers/: x86_64.ld
src/: lib.rs  main.rs  panic.rs  vga_buffer.rs
src/arch/: mod.rs
src/arch/x86_64/: mod.rs  start.rs
src/arch/x86_64/descriptor_table/: global.rs  interrupt.rs  mod.rs  segmentation.rs  task_state.rs
src/arch/x86_64/hardware/: cpu.rs  mod.rs
src/arch/x86_64/hardware/io/: mod.rs  programmable_interrupt_controller.rs  programmed.rs
src/arch/x86_64/interrupt/: descriptor_table.rs  exception.rs  mod.rs  request.rs  syscall.rs
src/arch/x86_64/interrupt/handlers/: exception.rs  mod.rs  request.rs  syscall.rs
src/arch/x86_64/segmentation/: global_descriptor_table.rs  mod.rs  task_state_segment.rs
src/boot/: Makefile  bios_print.s  boot  boot.s  init  init.s  tmp
src/bootloader/: boot.asm  bootloader.asm  cpuid.asm  linker.ld  loader.asm  long.asm  long_mode.asm  long_mode_init.asm  memory.asm  vga.asm
src/bootloader/grub/: grub.cfg
src/common/: io.rs  mod.rs
src/gdt/: mod.rs
src/interrupts/: mod.rs
src/kstd/: number.rs
src/serial/: mod.rs
src/vga/: buffer.rs  mod.rs  term.rs  writer.rs
targets/: x86_64_unknown-none.json
tests/: vga_test.rs
