[package]
name = "kernel"
version = "0.1.0"
description = "An attempt at building an operating system, make sure you're vaxxed."
authors = ["Alexandre Frigon <alexandre.frigon.1@gmail.com>"]
edition = "2018"

documentation = ""
homepage = ""
repository = "https://github.com/afrigon/TetanOS"
readme = "https://github.com/afrigon/TetanOS/blob/master/README.md"
license-file = "https://github.com/afrigon/TetanOS/blob/master/LICENSE"
keywords = ["operating", "system", "os", "tetanus", "tetanos", "vaxx"]
categories = ["no-std"]

[lib]
name = "kernel"
path = "src/lib.rs"
crate-type = ["staticlib"]

[badges]
travis-ci = { repository = "https://github.com/afrigon/TetanOS", branch = "master" }
maintenance = { status = "experimental" }

[dependencies]
bootloader = "^0.3.12"
spin = "0.4.9"
volatile = "0.2.3"
x86_64 = "0.4.0"
pic8259_simple = "0.1.1"
pc-keyboard = "0.3.1"

[dev-dependencies]
array-init = "0.0.3"

[package.metadata.bootimage]
default-target = "targets/x86_64_unknown-none.json"
output = "target/x86_64_unknown-none/debug/tetanos.bin"
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
